--- a/css/about.css
+++ b/css/about.css
@@ -100,7 +100,7 @@ header {
 }
 
 .nav-links li {
-    margin-left: 30px;
+    margin-left: 18px;
 }
 
 .nav-links a {
@@ -153,6 +153,7 @@ header {
     display: flex;
     align-items: center;
     gap: 50px;
+    /* background-color: #3a506b; */
 }
 
 .about-image {
@@ -181,7 +182,7 @@ header {
 
 .maksud-section {
     padding: 100px 0;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     background-color: #f9f9f9;
 }
         
@@ -203,34 +204,50 @@ header {
 }
         
 .maksud-content {
+    display: flex;
+    align-items: center;
+    gap: 50px;
     line-height: 1.6;
     color: #444;
 }
+.maksud-text {
+    flex: 1;
+}
+.maksud-image {
+    flex: 1;
+}
+.maksud-image img {
+    width: 100%;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+}
         
-.maksud-content p {
+.maksud-text p {
     margin-bottom: 20px;
     font-size: 56rem;
 }
         
         
-.maksud-content ol {
+.maksud-text ol {
     padding-left: 100px;
     margin-bottom: 20px;
+    /* background-color: #3a506b; */
+    text-align: justify;
 }
         
-.maksud-content ol li {
+.maksud-text ol li {
     margin-bottom: 10px;
 }
         
         
-.maksud-content ol li ol {
+.maksud-text ol li ol {
     list-style-type: upper-alpha;
     padding-left: 30px;
     margin-top: 10px;
 }
         
         
-.maksud-content br {
+.maksud-text br {
     display: block;
     margin-top: 8px;
     content: "";
@@ -252,6 +269,12 @@ header {
 }
 
 /* Footer */
+.container-footer{
+    max-width: 1300px;
+    margin: 0 auto;
+    padding: 0 20px;
+    /* background-color: #ddd; */
+}
 footer {
     background-color: var(--secondary-color);
     color: white;
@@ -261,11 +284,41 @@ footer {
 .footer-content {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 30px;
+    gap: 15px;
     margin-bottom: 40px;
 }
 
-
+/* .footer-column{
+    background-color: #8b8b8b;
+} */
+.footer-content {
+    /* background-color: #4d79ff; */
+    margin: 0;
+    /* padding: 10px; */
+    
+    display: flex;
+    /* grid-template-columns: repeat(auto-fit, minmax(10px, 1fr)); */
+    gap: 20px;
+    margin-bottom: 40px;
+}
+.footer-column1{
+    /* background-color: #c21b1b; */
+    width: 380px;
+}
+.footer-column2{
+    /* background-color: #c21b1b; */
+    width: 150px;
+}
+.footer-column3 iframe{
+    border-radius: 8px;
+    /* margin-top: 10px; */
+    width:420px; 
+    height:150px; 
+}
+.footer-column4{
+    /* background-color: #c21b1b; */
+    width: 250px;
+}
 .footer-column h3 {
     font-size: 20px;
     margin-bottom: 20px;
@@ -292,7 +345,7 @@ footer {
 }
 
 .footer-links a {
-    color: #ddd;
+    color: #ffffff;
     transition: color 0.3s ease;
 }
 
@@ -328,6 +381,7 @@ footer {
     padding-top: 20px;
     border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
+
 
 /* Responsive Styles */
 @media (max-width: 992px) {
