--- a/css/home.css
+++ b/css/home.css
@@ -25,6 +25,7 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 20px;
+    /* background-color: #8b8b8b; */
 }
 
 a {
@@ -100,7 +101,7 @@ header {
 }
 
 .nav-links li {
-    margin-left: 30px;
+    margin-left: 18px;
 }
 
 .nav-links a {
@@ -310,6 +311,12 @@ header {
 }
 
 /* Footer */
+.container-footer{
+    max-width: 1300px;
+    margin: 0 auto;
+    padding: 0 20px;
+    /* background-color: #ddd; */
+}
 footer {
     background-color: var(--secondary-color);
     color: white;
@@ -319,11 +326,41 @@ footer {
 .footer-content {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 30px;
+    gap: 15px;
     margin-bottom: 40px;
 }
 
-
+/* .footer-column{
+    background-color: #8b8b8b;
+} */
+.footer-content {
+    /* background-color: #4d79ff; */
+    margin: 0;
+    /* padding: 10px; */
+    
+    display: flex;
+    /* grid-template-columns: repeat(auto-fit, minmax(10px, 1fr)); */
+    gap: 20px;
+    margin-bottom: 40px;
+}
+.footer-column1{
+    /* background-color: #c21b1b; */
+    width: 380px;
+}
+.footer-column2{
+    /* background-color: #c21b1b; */
+    width: 150px;
+}
+.footer-column3 iframe{
+    border-radius: 8px;
+    /* margin-top: 10px; */
+    width:420px; 
+    height:150px; 
+}
+.footer-column4{
+    /* background-color: #c21b1b; */
+    width: 250px;
+}
 .footer-column h3 {
     font-size: 20px;
     margin-bottom: 20px;
@@ -350,7 +387,7 @@ footer {
 }
 
 .footer-links a {
-    color: #ddd;
+    color: #ffffff;
     transition: color 0.3s ease;
 }
 
