--- a/css/contact.css
+++ b/css/contact.css
@@ -176,20 +176,20 @@ header {
 
 /* Contact Info Styles */
 .contact-info {
-    flex: 1;
+    /* flex: 1; */
     min-width: 200px;
     margin-top: 20px;
 }
 
 .contact-info h1 {
     font-size: 2.5rem;
-    margin-bottom: 10px;
+    margin-top: 15px;
     line-height: 1.2;
 }
 
 .contact-info h2 {
     font-size: 2rem;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     text-align: left;
     font-weight: 600;
 }
