--- a/css/gateaway.css
+++ b/css/gateaway.css
@@ -46,7 +46,9 @@ body {
 }
 
 .form-actions {
-    text-align: right;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin-bottom: 1rem;
 }
 
