--- a/css/home.css
+++ b/css/home.css
@@ -436,7 +436,7 @@ header {
 
 /* Footer */
 footer {
-    background-color: var(--secondary-color);
+    background-color: rgba(49, 49, 49, 1);
     color: white;
     padding: 40px 0 20px;
 }
@@ -493,7 +493,7 @@ footer {
     left: 0;
     width: 50px;
     height: 2px;
-    background-color: var(--primary-color);
+    background-color: var(--dark-color);
 }
 
 .footer-links {
