--- a/css/about.css
+++ b/css/about.css
@@ -54,7 +54,7 @@ button:hover, .btn:hover {
     text-align: center;
     margin-bottom: 40px;
     position: relative;
-    color: var(--secondary-color);
+    color: #ffffff;
 }
 
 .section-title::after {
@@ -306,14 +306,13 @@ header {
 
 .maksud-section {
     padding: 100px 0;
-    /* margin: 0 auto; */
-    background-color: #f9f9f9;
+    background-color: #3E3E3E;
 }
         
-.section-title {
+.section-title h2 {
     text-align: center;
     font-size: 2rem;
-    color: #333;
+    color: #ffffff;
     margin-bottom: 30px;
     position: relative;
     padding-bottom: 15px;
@@ -324,7 +323,7 @@ header {
     transform: translateX(-50%);
     width: 100%;
     height: auto;
-    background-color: #3a506b;
+    background-color: #3e3e3e;
 }
         
 .maksud-content {
@@ -332,7 +331,7 @@ header {
     align-items: center;
     gap: 50px;
     line-height: 1.6;
-    color: #444;
+    color: #ffffff;
 }
 .maksud-text {
     flex: 1;
@@ -406,35 +405,25 @@ footer {
     margin-bottom: 40px;
 }
 
-/* .footer-column{
-    background-color: #8b8b8b;
-} */
+
 .footer-content {
-    /* background-color: #4d79ff; */
-    margin: 0;
-    /* padding: 10px; */
-    
+    margin: 0;    
     display: flex;
-    /* grid-template-columns: repeat(auto-fit, minmax(10px, 1fr)); */
     gap: 20px;
     margin-bottom: 40px;
 }
 .footer-column1{
-    /* background-color: #c21b1b; */
     width: 380px;
 }
 .footer-column2{
-    /* background-color: #c21b1b; */
     width: 150px;
 }
 .footer-column3 iframe{
     border-radius: 8px;
-    /* margin-top: 10px; */
     width:420px; 
     height:150px; 
 }
 .footer-column4{
-    /* background-color: #c21b1b; */
     width: 250px;
 }
 .footer-column h3 {
@@ -585,4 +574,3 @@ footer {
     margin-bottom: 15px;
 }
 }
-
