--- a/css/about.css
+++ b/css/about.css
@@ -496,7 +496,6 @@ footer {
 .about-content {
     flex-direction: column;
 }
-
 .about-image {
     order: 1;
 }
@@ -573,4 +572,48 @@ footer {
 .form-group {
     margin-bottom: 15px;
 }
+}
+
+/* Responsive Styles footer */
+@media (max-width: 992px) {
+    .footer-content {
+        flex-direction: column;
+        gap: 30px;
+    }
+}
+
+@media (max-width: 768px) {
+    .footer {
+        padding: 30px 20px;
+    }
+
+    /* Sembunyikan location dan contact us */
+    .footer-column3,
+    .footer-column4 {
+        display: none;
+    }
+
+    .footer-column1,
+    .footer-column2 {
+        width: 100%;
+    }
+}
+
+@media (max-width: 576px) {
+    .card {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .container {
+        padding: 0 15px;
+    }
+
+    .button {
+        width: 100%;
+    }
+
+    .form-group {
+        margin-bottom: 15px;
+    }
 }
